src/test/deca/codegen/valid/sansObjet/test-TSTO.deca
// Description :
// Test TSTO
// c vaut 7, pas d'affichage
{
    int a;
    int b;
    int c;

    a = 1;
    b = 2;
    c = a + b * (a + b);
}
