src/test/deca/codegen/invalid/overflow.deca
// Resultats :
// message d'erreur "overflow_arithmetique"
{
    int max = 2147483647;
    print(max + 1);
}
